--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
   text-decoration: none;
   background-repeat: no-repeat;
   background-position: left;
+  white-space: nowrap;
 }
 
 .header-email {
@@ -182,6 +183,7 @@ body {
   text-decoration: none;
   background-repeat: no-repeat;
   background-position: left;
+  white-space: nowrap;
 }
 
 .footer-email {
